--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@ body{
 .nav-content{
     width: 100%;
     height: 3rem;
-    background: rgb(238, 29, 63);
+    background: linear-gradient(30deg,rgb(247, 49, 148),rgb(255, 21, 21));
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem 0 1rem;
     color: white;
+    box-shadow: 0px 2px 5px rgba(134, 134, 134, 0.6);
 }
 
 .logo{
@@ -50,6 +51,7 @@ body{
 .toggler{
     color: gray;
     list-style: none;
+    
 }
 
 .toggler li{
@@ -83,12 +85,12 @@ body{
 
 .links a:hover{
     color: white;
-    background: rgb(238, 29, 63);
+    background: rgb(247, 49, 148);
     padding-left: 1.2rem;
 }
 
 .nav-links{
-    border: 1px solid lightgray;
+    box-shadow: 0px 1px 10px rgba(134, 134, 134, 0.3);
     height: 15rem;
 }
 
